// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overall App Tests lists no top anagram requests initially 1`] = `
<h5
  class="text-center pt-5 pb-5"
  data-testid="top-anagrams-board-header"
>
  Top 10 Most Requested Anagram Checks
</h5>
`;

exports[`Overall App Tests lists top anagram requests when they exist 1`] = `
Array [
  <li
    class="list-group-item d-flex justify-content-between list-group-item-undefined"
    data-test="list-group-item"
    data-testid="top-anagram-item"
    style="user-select: none;"
  >
    <span
      class="ml-3"
    >
      1
    </span>
    <span>
      testing
       - 
      testing
    </span>
    <span
      class="badge light-blue badge-light-blue badge-pill mr-3"
      data-test="badge"
    >
      10
    </span>
  </li>,
  <li
    class="list-group-item d-flex justify-content-between list-group-item-undefined"
    data-test="list-group-item"
    data-testid="top-anagram-item"
    style="user-select: none;"
  >
    <span
      class="ml-3"
    >
      2
    </span>
    <span>
      tester
       - 
      tester
    </span>
    <span
      class="badge light-blue badge-light-blue badge-pill mr-3"
      data-test="badge"
    >
      9
    </span>
  </li>,
]
`;

exports[`Overall App Tests renders the app without data 1`] = `
<div>
  <div
    data-test="box"
  >
    <nav
      class="navbar navbar-expand-md"
      data-test="navbar"
      role="navigation"
    >
      <ul
        class="navbar-nav justify-content-around w-100"
        data-test="navbar-nav"
      >
        <li
          class="nav-item"
          data-test="nav-item"
        >
          <h2
            style="user-select: none;"
          >
            Community Anagrams
          </h2>
        </li>
      </ul>
    </nav>
    <div
      class="container"
      data-test="container"
    >
      <div
        class="card mt-5"
        data-test="card"
      >
        <div
          class="card-body"
          data-test="card-body"
        >
          <h4
            class="text-center mb-4"
          >
            Check Anagram
          </h4>
          <p
            class="text-center "
          >
            Check if two words are anagrams here.
             
            <strong>
              Do not include special characters and numbers.
            </strong>
          </p>
          <form>
            <div
              class="grey-text"
            >
              <div
                class="md-form"
              >
                
                <input
                  aria-disabled="false"
                  class="form-control"
                  data-test="input"
                  data-testid="first-word-input"
                  name="firstWord"
                  type="text"
                  value=""
                />
                <label
                  aria-labelledby=""
                  class=""
                  data-error=""
                  data-success=""
                  id=""
                >
                  First Word
                </label>
              </div>
              <div
                class="md-form"
              >
                
                <input
                  aria-disabled="false"
                  class="form-control"
                  data-test="input"
                  data-testid="second-word-input"
                  id="second-word-input"
                  name="secondWord"
                  type="text"
                  value=""
                />
                <label
                  aria-labelledby=""
                  class=""
                  data-error=""
                  data-success=""
                  for="second-word-input"
                  id=""
                >
                  Second Word
                </label>
              </div>
            </div>
            <div
              class="text-center"
            >
              <button
                class="btn-blue btn Ripple-parent"
                data-test="button"
                data-testid="anagram-submission-button"
                type="button"
              >
                Check
                <div
                  class="Ripple "
                  data-test="waves"
                  style="top: 0px; left: 0px; width: 0px; height: 0px;"
                />
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        class="mb-5"
        data-test="box"
      >
        <h5
          class="text-center pt-5 pb-5"
          data-testid="top-anagrams-board-header"
        >
          Top 10 Most Requested Anagram Checks
        </h5>
        <div
          class="h-100 w-100 d-flex justify-content-center align-middle"
          data-test="box"
        >
          <div
            class="spinner-border m-auto"
            role="status"
            style="width: 15rem; height: 15rem;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Overall App Tests should handle error when saving anagram 1`] = `
<div
  class="alert alert-danger text-center"
  data-testid="error-alert"
  role="alert"
/>
`;

exports[`Overall App Tests should handle not saving anagrams when invalid 1`] = `
<div
  class="alert alert-danger text-center"
  data-testid="error-alert"
  role="alert"
>
  Please remove any numbers or special symbols from your words and try again.
</div>
`;

exports[`Overall App Tests should handle saving anagrams when valid 1`] = `
<div
  class="alert alert-danger text-center"
  data-testid="result-alert"
  role="alert"
>
  Unfortunately 'racer' and 'carer' are not anagrams. Feel free to check other words and see if they are anagrams.
</div>
`;
